--- a/xml_presenter_webapp/ClientApp/src/app/home/home.component.html
+++ b/xml_presenter_webapp/ClientApp/src/app/home/home.component.html
@@ -17,14 +17,33 @@
  <input (keyup)="onKey($event)">
  <button (click)="fetchOrder()">Find Order</button>
  <div *ngIf="order" >
-  <h1>{{order.orderNumber}}</h1>
+  <h1>Order number: {{order.orderNumber}}</h1>
   <h2>Customer: {{order.customerName}}</h2>
-  <p>Heroes:</p>
-  <!-- <ul>
-    <li *ngFor="let hero of heroes">
-      {{ hero.name }}
-      </li>
-  </ul> -->
+  <table class='table table-striped' aria-labelledby="tableLabel">
+    <thead>
+      <tr>
+        <th>Orderline</th>
+        <th>ProductNumber</th>
+        <th>Name</th>
+        <th>Category</th>
+        <th>Price</th>
+        <th>Quantity</th>
+        <th>Sum</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let product of order.products">
+        <td>{{ product.orderLineNumber }}</td>
+        <td>{{ product.productNumber }}</td>
+        <td>{{ product.name }}</td>
+        <td>{{ product.productGroup }}</td>
+        <td>{{ product.price }}</td>
+        <td>{{ product.quantity }}</td>
+        <td>{{ product.quantity * product.price }}</td>
+      </tr>
+    </tbody>
+  </table>
+  
   <!-- <p *ngIf="heroes.length > 3">There are many heroes!</p> -->
  </div>
  <p *ngIf="!order">We could not found your order in our system. Please make sure you entered the right order number.</p>
