--- a/xml_presenter_webapp/ClientApp/src/app/home/home.component.html
+++ b/xml_presenter_webapp/ClientApp/src/app/home/home.component.html
@@ -1,25 +1,16 @@
-<!-- <h1>Hello, world!</h1>
-<p>Welcome to your new single-page application, built with:</p>
-<ul>
-  <li><a href='https://get.asp.net/'>ASP.NET Core</a> and <a href='https://msdn.microsoft.com/en-us/library/67ef8sbd.aspx'>C#</a> for cross-platform server-side code</li>
-  <li><a href='https://angular.io/'>Angular</a> and <a href='http://www.typescriptlang.org/'>TypeScript</a> for client-side code</li>
-  <li><a href='http://getbootstrap.com/'>Bootstrap</a> for layout and styling</li>
-</ul>
-<p>To help you get started, we've also set up:</p>
-<ul>
-  <li><strong>Client-side navigation</strong>. For example, click <em>Counter</em> then <em>Back</em> to return here.</li>
-  <li><strong>Angular CLI integration</strong>. In development mode, there's no need to run <code>ng serve</code>. It runs in the background automatically, so your client-side resources are dynamically built on demand and the page refreshes when you modify any file.</li>
-  <li><strong>Efficient production builds</strong>. In production mode, development-time features are disabled, and your <code>dotnet publish</code> configuration automatically invokes <code>ng build</code> to produce minified, ahead-of-time compiled JavaScript files.</li>
-</ul>
-<p>The <code>ClientApp</code> subdirectory is a standard Angular CLI application. If you open a command prompt in that directory, you can run any <code>ng</code> command (e.g., <code>ng test</code>), or use <code>npm</code> to install extra packages into it.</p>
- -->
- <h1>Search by order number</h1>
+
+ <div *ngIf="!order" class="container .bg-primary">
+   <h2>Search by order number</h2>
+   <input (keyup)="onKey($event)">
+   <button (click)="fetchOrder()">Find Order</button>
+ </div>
+ <div *ngIf="order">
+ <h2>Search by order number</h2>
  <input (keyup)="onKey($event)">
  <button (click)="fetchOrder()">Find Order</button>
- <div *ngIf="order" >
-  <h1>Order number: {{order.orderNumber}}</h1>
-  <h2>Customer: {{order.customerName}}</h2>
-  <table class='table table-striped' aria-labelledby="tableLabel">
+  <h3>Order number: {{order.orderNumber}}</h3>
+  <h3>Customer: {{order.customerName}}</h3>
+  <table class='table table-striped .table-responsive{-sm|-md|-lg|-xl}.' aria-labelledby="tableLabel">
     <thead>
       <tr>
         <th>Orderline</th>
@@ -28,7 +19,7 @@
         <th>Category</th>
         <th>Price</th>
         <th>Quantity</th>
-        <th>Sum</th>
+        <th>Total</th>
       </tr>
     </thead>
     <tbody>
@@ -46,4 +37,4 @@
   
   <!-- <p *ngIf="heroes.length > 3">There are many heroes!</p> -->
  </div>
- <p *ngIf="!order">We could not found your order in our system. Please make sure you entered the right order number.</p>
+ <p *ngIf="showError">We could not found your order in our system. Please make sure you entered the right order number.</p>
